<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#1c6efc"
        android:textColor="#ffffff"/>

    <EditText
        android:id="@+id/fontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_10_15"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:onClick="doneClicked"
        android:layout_gravity="center"
        android:textSize="35sp" />


</androidx.appcompat.widget.LinearLayoutCompat>