<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ConvertActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1c6efc">

            <TextView
                android:id="@+id/from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/from"
                android:textColor="#ffffff"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/InputValue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:hint="@string/input"
                android:inputType="text"
                android:textSize="30sp"
                tools:ignore="AutoFill" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1c6efc">

            <TextView
                android:id="@+id/to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to"
                android:textColor="#ffffff"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/thirdRowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00aeff"
                android:text="@string/binary"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/binary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fourthRowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#348feb"
                android:text="@string/hexadecimal"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/hexadecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fifthRowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00aeff"
                android:text="@string/decimal"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/decimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sixthRowText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#348feb"
                android:text="@string/octal"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/octal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <Button
                android:id="@+id/btConvert"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000399"
                android:onClick="onConvert"
                android:text="@string/convert"
                android:textColor="#ffffff"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btClear"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000399"
                android:onClick="onClear"
                android:text="@string/clear"
                android:textColor="#ffffff"
                android:textSize="15sp"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/btSetting"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#000399"
                android:onClick="onSetting"
                android:text="@string/setting"
                android:textColor="#ffffff"
                android:textSize="15sp"
                tools:targetApi="lollipop" />
        </TableRow>
    </TableLayout>


</androidx.appcompat.widget.LinearLayoutCompat>